madm/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: madm-ingress
  namespace: push
spec:
  ingressClassName: nginx        
  rules:
    - host: dev.madm.sophy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madm-svc
                port:
                  number: 8080
